# CAP6990_Applied_Robotics

./: .gitignore  README.md
applied_robotics/: package.xml  setup.cfg  setup.py
applied_robotics/applied_robotics/: aruco_detector.py  ces_optimizer.py  ces_service.py  ces_test.py  ekf_node.py  extended_kalman_filter.py  fsm.py  fsm_state.py  graph_slam_solver.cpp  icp.py  icp_node.py  idle_state.py  kd_tree.py  landmark_detector_node.py  lidar_variance_measurement.py  move_server.py  move_state.py  pid_controller.py  plan_state.py  pose_graph_collection.py  pose_graph_optimizer.py  pose_plot_node.py  position_controller.py  rrt_planner.py
applied_robotics/config/: gz_bridge.yaml  node_config.yaml
applied_robotics/launch/: SimServer.launch.py  assignment_4.launch.py  assignment_5.launch.py  assignment_6.launch.py  assignment_7.launch.py  lidar_analysis.launch.py  pose_graph_collection.launch.py  sim.launch.py  teleop.launch.py
applied_robotics/models/: batch_aruco.py  generate_aruco_texture.py  sdf_modifer.py  test_world.sdf
applied_robotics/worlds/: aruco_world.world  lidar_test_world.world
applied_robotics_utilities/: CMakeLists.txt  package.xml
applied_robotics_utilities/action/: MoveToGoal.action  SaveImage.action
applied_robotics_utilities/msg/: LandmarkArray.msg
applied_robotics_utilities/srv/: CESOptimizeConfigure.srv  CESPathOptimize.srv  MoveStateCancel.srv
offline_graph_optimizer/: CMakeLists.txt  graph_slam_solver.cpp
offline_graph_optimizer/data/: graph_slam_plotter.py  graph_slam_result.txt  ground_truth_poses.txt  laserscan_plotter.py  (+1 more)
(+35 files in other folders)
